--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -415,7 +415,7 @@ table td:nth-child(2){
     background: linear-gradient(#272c30, #272c30 80%, #f5f6f6 70%);
     height: 300px;
     position: relative;
-    margin-bottom: 50px;
+    
 }
 #logo-reservation h1{
     color:#e0e0e0;
@@ -502,23 +502,20 @@ text-align: center;
 }
 
 #rental-information {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: inline;
     box-sizing: border-box;
     padding: 20px;
     margin-right: 50px;
-    margin-top: 20px;
-    flex: 1; 
-    width: auto
+    
+   
 }
-
 
 #rental-information section {
     background-color: rgba(255, 255, 255, 0.8);  
     max-width: 300px;  
     margin-bottom: 20px;  
     padding: 20px;  
+    border: 2px solid gold;
     border-radius: 10px;  
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
     transition: box-shadow 0.3s;  /
