--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -439,6 +439,7 @@ table td:nth-child(2){
 
 #form-request h1{
 text-align: center;
+font-size: 40px;
 }
 
 #form-request form {
@@ -446,6 +447,7 @@ text-align: center;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid  gold;
 }
 
 #form-request label {
@@ -495,24 +497,30 @@ text-align: center;
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
+    font-weight: bold; 
 }
 
+
 #form-request button:hover {
-    background-color: #ffd700;
+    background-color: rgb(219, 187, 6)
+    ;
 }
 
 #rental-information {
     display: inline;
     box-sizing: border-box;
     padding: 20px;
-    margin-right: 50px;
-    
+
    
+}
+#rental-information h1 {
+    font-size: 40px;
+    
 }
 
 #rental-information section {
     background-color: rgba(255, 255, 255, 0.8);  
-    max-width: 300px;  
+    max-width: 350px;  
     margin-bottom: 20px;  
     padding: 20px;  
     border: 2px solid gold;
