--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -640,7 +640,11 @@ font-size: 40px;
         height: 20px; 
         fill: gold;  
     }
-
+    .menu-links a.active {
+        /* Estilos para el enlace activo, por ejemplo, cambiar el color de fondo o texto */
+        background-color: #333;
+        color: gold;
+    }
     .footer-menu nav a {
         color: white;
         text-decoration: none;
