--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -160,14 +160,14 @@ hr {
 }
 #contact-image {
     position: absolute;
-    bottom: 0; /* Adjust the top value as needed */
-    right: 0; /* Adjust the right value as needed */
+    bottom: 0;  
+    right: 0;  
 }
 
 .contact-main {
     display: flex;
-    justify-content: space-between; /* Ajusta el espacio entre los elementos */
-    align-items: flex-start; /* Alinea los elementos en la parte superior */
+    justify-content: space-between;  
+    align-items: flex-start; 
    
 }
 
@@ -276,15 +276,15 @@ form label.top input:required:valid{
     border-left: green solid 10px; 
  }
  .addresses {
-    width: 33.33%; /* Establece el ancho al 33.33% para que ocupe 1/3 de la página */
+    width: 33.33%;  
     box-sizing: border-box;
 }
 
 .addresses .address1,
 .addresses .address2 {
-    border: 1px solid #ddd;     /* Borde sólido de 1 píxel con color gris claro (#ddd) */
-    border-radius: 8px;         /* Bordes redondeados */
-    margin-right: 30px;              /* Espaciado interno para separar el contenido del borde */
+    border: 1px solid #ddd;      
+    border-radius: 8px;         
+    margin-right: 30px;               
     background-color: #f7f7f7;
     margin-bottom: 20px;  
     margin-top: 40px;
@@ -292,7 +292,7 @@ form label.top input:required:valid{
 }
 .address1 img,
 .address2 img {
-    float: left;      /* Alinea la imagen a la izquierda */
+    float: left;      
     margin: 0 auto 10px; 
 }
 
@@ -774,7 +774,7 @@ table td:nth-child(3){
     height: auto;
 }
 #rental-image {
-    max-width: 30%;  
+    max-width: 20%;  
     height: auto;
 }
 
