--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -73,15 +73,61 @@ main {
     width: 100%;
     overflow: hidden; /* Hide horizontal scroll for the hero image */
 }
-
-.container picture {
+.hero-container {
+    position: relative;
+    width: 100%;
+}
+.hero-container picture {
     width: 100%;
 }
 
-.container img {
+.hero-container img {
     width: 100%;
     height: auto;
 }
+.overlay {
+    position: absolute;
+    top: 45%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    max-width: 400px;
+    max-height: 350px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);  
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);  
+}
+
+.overlay img {
+    max-width: 300px;
+    max-height: 300px;
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+     
+}
+
+.overlay button {
+    background-color: #ff9900; /* Color de fondo del botón */
+    color: #fff; /* Color del texto del botón */
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.overlay button:hover {
+    background-color: #cc7700; /* Cambia el color de fondo en hover */
+}
+
+.overlay button:hover a {
+    color: #fff; /* Cambia el color del texto en hover */
+}
+
 footer{
     position: relative;
     background-image: url("https://sergiofdeveloper.github.io/wdd230/rental/images/background.webp");  
@@ -365,8 +411,8 @@ table td:nth-child(2){
 #logo-fleet h1{
     color:#e0e0e0;
     font-size:100px
-}
-#prices h1{
+} 
+#pricing{
     text-align: center;
 
 }
@@ -781,7 +827,7 @@ table td:nth-child(3){
     width: 30%;  
 
 }
-#prices h1{
+#pricing{
     font-size: 16px;
 }
 
@@ -796,11 +842,11 @@ table td:nth-child(3){
 }
 #logo-fleet h1 {
     font-size: 35px;  
-    text-align: left;
+    
 }
 #logo-prices h1 {
     font-size: 35px;  
-    text-align: left;
+     
 }
 #fleet-image {
     max-width: 50%;  
