--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -128,7 +128,9 @@ main {
     color: #fff; /* Cambia el color del texto en hover */
 }
 .content a{
-    decoration: none
+    color: white;
+    text-decoration: none;
+    font-size: 20px
 }
 
 footer{
