--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -99,6 +99,7 @@ main {
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);  
+    border-radius: 10px; 
 }
 
 .overlay img {
