--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -68,7 +68,8 @@ header {
     text-decoration: none;
 }
 
- 
+/*********************** HOME STYLES*****************************/
+
 main {
     width: 100%;
     overflow: hidden; /* Hide horizontal scroll for the hero image */
@@ -112,8 +113,8 @@ main {
 }
 
 .overlay button {
-    background-color: #ff9900; /* Color de fondo del botón */
-    color: #fff; /* Color del texto del botón */
+    background-color: #ff9900;  
+    color: #fff;  
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -123,17 +124,79 @@ main {
 }
 
 .overlay button:hover {
-    background-color: #cc7700; /* Cambia el color de fondo en hover */
+    background-color: #cc7700;  
 }
 
 .overlay button:hover a {
-    color: #fff; /* Cambia el color del texto en hover */
+    color: #fff;  
 }
 .content a{
     color: white;
     text-decoration: none;
     font-size: 20px
 }
+#info-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.info {
+    width: calc(33.33% - 10px); /* Calcula el ancho para tres bloques con 10px de separación entre ellos */
+    padding: 20px;
+    margin-bottom: 20px; /* Añade espacio entre los bloques */
+    box-sizing: border-box;
+}
+
+.info:not(:last-child) {
+    border-right: 1px solid #ccc; /* Añade un borde solo en el lado derecho de los bloques 1 y 2 */
+}
+
+.info h1{
+    font-size: 50px;
+    color: #333638;
+}
+
+#info-cozumel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    align-items: flex-start;
+}
+
+.places h1 {
+    margin-bottom: 20px;
+}
+
+.weather, .forecast {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+    width: 100%;
+}
+.weather h1, .forecast h1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+    width: 100%;
+}
+.weather-card, .forecast.card {
+    width: 300px;
+    margin: 10px;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+ 
+
+.weather-card img, .forecast-card img {
+    max-width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+}
+ 
 
 footer{
     position: relative;
@@ -341,9 +404,9 @@ form label.top input:required:valid{
 .addresses .address2 {
     border: 1px solid #ddd;      
     border-radius: 8px;         
-    margin-right: 30px;               
+                   
     background-color: #f7f7f7;
-    margin-bottom: 20px;  
+    margin-bottom: 10px;  
     margin-top: 40px;
     text-align: center;
 }
