--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -4,7 +4,32 @@ body, html {
     font-family: 'Montserrat', sans-serif;
 
 }
+#high-temp-message {
+    width: 100%;
+    height: 25px;
+    background-color:gold;  
+    text-align: center;
+    line-height: 15px;
+    font-weight: bold;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;  
+    color:#050505
+}
 
+#high-temp-message button {
+    background-color: transparent;
+    border: none;
+    color:black;
+    cursor: pointer;
+    font-size: 18x;
+    margin-left: 10px;
+}
+#high-temp-message button {
+    font-size: 22px; 
+}
+ 
 header {
     
     background-image:url("https://sergiofdeveloper.github.io/wdd230/rental/images/background.webp");
@@ -113,8 +138,8 @@ main {
 }
 
 .overlay button {
-    background-color: #ff9900;  
-    color: #fff;  
+    background-color: gold;  
+    color: #ffffff;  
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -131,7 +156,7 @@ main {
     color: #fff;  
 }
 .content a{
-    color: white;
+    color: rgb(6, 6, 6);
     text-decoration: none;
     font-size: 20px
 }
@@ -143,8 +168,9 @@ main {
 .info {
     width: calc(33.33% - 10px); /* Calcula el ancho para tres bloques con 10px de separación entre ellos */
     padding: 20px;
-    margin-bottom: 20px; /* Añade espacio entre los bloques */
+    margin-bottom: 20px;  
     box-sizing: border-box;
+    text-align: justify;
 }
 
 .info:not(:last-child) {
