--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -15,7 +15,8 @@ body, html {
     top: 0;
     left: 0;
     z-index: 1000;  
-    color:#050505
+    color:#050505;
+    font-size:14px;
 }
 
 #high-temp-message button {
@@ -23,11 +24,10 @@ body, html {
     border: none;
     color:black;
     cursor: pointer;
-    font-size: 18x;
     margin-left: 10px;
 }
 #high-temp-message button {
-    font-size: 22px; 
+    font-size: 20px; 
 }
  
 header {
@@ -139,7 +139,7 @@ main {
 
 .overlay button {
     background-color: gold;  
-    color: #ffffff;  
+    color: #040404;  
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
