--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -184,22 +184,30 @@ main {
 
 #info-cozumel {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+   
+}
+.places {
+    width: 66.66%; /* 2/3 of the page */
+    box-sizing: border-box;
+    padding-right: 20px; /* Add some padding for spacing */
 }
 
 .places h1 {
     margin-bottom: 20px;
 }
 
+#weather-info {
+    width: 33.33%; /* 1/3 de la página */
+    box-sizing: border-box;
+    margin-top: 20px;
+}
+
 .weather, .forecast {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: center;
-    width: 100%;
+    width: 100%; /* Ocupa el 100% del contenedor de weather-info */
+    box-sizing: border-box;
+    margin-top: 20px;
 }
 .weather h1, .forecast h1 {
     display: flex;
@@ -209,20 +217,28 @@ main {
     width: 100%;
 }
 .weather-card, .forecast.card {
-    width: 300px;
+    width: 100%; /* Full width within the weather and forecast containers */
+    box-sizing: border-box;
     margin: 10px;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
- 
 
 .weather-card img, .forecast-card img {
     max-width: 100px;
     height: auto;
     margin-bottom: 10px;
 }
- 
+.visit-cozumel {
+    width: 100%; /* Ocupar todo el ancho disponible */
+    max-width: 300px; /* Puedes ajustar el máximo si lo deseas */
+    margin-bottom: 30px; /* Añadido espacio entre elementos para mejor legibilidad */
+}
+
+.visit-cozumel img {
+    width: 100%; /* Asegurándose de que las imágenes se ajusten al contenedor */
+}
 
 footer{
     position: relative;
@@ -818,7 +834,9 @@ font-size: 40px;
     .overlay {
         display:none
     }
-
+    .visit-cozumel {
+        width: 48%; /* Para que aparezcan al menos 2 elementos por fila en pantallas más grandes */
+    }
     .footer-menu nav a {
         color: white;
         text-decoration: none;
