--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -166,15 +166,15 @@ main {
     justify-content: space-between;
 }
 .info {
-    width: calc(33.33% - 10px); /* Calcula el ancho para tres bloques con 10px de separación entre ellos */
-    padding: 20px;
+    width: calc(33.33% - 10px);  
     margin-bottom: 20px;  
     box-sizing: border-box;
     text-align: justify;
+    padding: 20px;
 }
 
 .info:not(:last-child) {
-    border-right: 1px solid #ccc; /* Añade un borde solo en el lado derecho de los bloques 1 y 2 */
+    border-right: 1px solid #ccc;  
 }
 
 .info h1{
@@ -188,16 +188,16 @@ main {
 }
 
 .places {
-    width: 66.666%; /* 2/3 del ancho total de la página */
+    width: 66.666%;  
     display: flex;
     flex-wrap: wrap;
 }
 .visit-cozumel {
-    width: 48%; /* 2 elementos por fila ocupando todo el ancho posible */
+    width: 48%;  
     margin: 1%;
     box-sizing: border-box;
-    border: 1px solid #ccc; /* Borde */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
+    border: 1px solid #ccc; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
     transition: transform 0.3s ease-in-out; 
     padding: 5px;
 }
@@ -216,8 +216,18 @@ main {
 }
 
 #weather-info {
-    width: 33.333%; /* 1/3 del ancho total de la página */
+    width: 33.333%;  
 }
+#weather-info h1{
+    text-align: center;
+    background-color: rgb(0, 187, 255);  
+    padding: 10px;  
+    margin: 0;  
+    width: 100%;
+    box-sizing: border-box; 
+    margin-right: 10px; 
+}
+
 
 .weather, .forecast {
     width: 100%; /* Ocupa el 100% del contenedor de weather-info */
@@ -816,7 +826,7 @@ font-size: 40px;
         color: white;
         cursor: pointer;
         align-self: flex-end; /* Alinea el botón al final del contenedor (esquina superior derecha) */
-        position: absolute; /* Posición absoluta en relación con el contenedor padre */
+        position: absolute; 
         top: 10px;  
         right: 25px; 
         z-index: 2; /* Asegura que el botón esté por encima del contenido del menú */
@@ -846,9 +856,55 @@ font-size: 40px;
     .overlay {
         display:none
     }
-    .visit-cozumel {
-        width: 48%; /* Para que aparezcan al menos 2 elementos por fila en pantallas más grandes */
+    .info {
+        width: 100%; /* Ocupa el ancho completo en pantallas más pequeñas */
+        margin-bottom: 20px;
+        border-right: none; /* Elimina el borde derecho en pantallas más pequeñas */
     }
+
+    .info h1 {
+        font-size: 36px; /* Reduzco el tamaño de la fuente para pantallas más pequeñas */
+    }
+    
+    #info-cozumel {
+        flex-direction: column; /* Cambia a disposición de columna en pantallas más pequeñas */
+    }
+
+    .places {
+        width: 100%; /* Ocupa el ancho completo en pantallas más pequeñas */
+        margin-right: 0; /* Elimina el margen derecho */
+    }
+
+    .visit-cozumel {
+        width: 100%; /* Ocupa el ancho completo en pantallas más pequeñas */
+        margin: 10px 0; /* Ajusta el margen para dar más espacio entre elementos */
+    }
+
+    .places h1, #weather-info h1 {
+        margin-right: 0; /* Elimina el margen derecho en h1 */
+    }
+
+    #weather-info {
+        width: 100%; /* Ocupa el ancho completo en pantallas más pequeñas */
+        margin-top: 20px; /* Ajusta el margen superior */
+    }
+
+    .weather h1, .forecast h1 {
+        margin: 0; /* Elimina el margen en h1 */
+    }
+
+    .weather-card, .forecast-card {
+        margin: 10px 0; /* Ajusta el margen superior e inferior */
+    }
+    
+    .weather-card img, .forecast-card img {
+        max-width: 80px; /* Reduzco el tamaño máximo de la imagen */
+    }
+
+    .visit-cozumel img {
+        margin-bottom: 10px; /* Ajusta el espacio inferior de las imágenes */
+    }
+
     .footer-menu nav a {
         color: white;
         text-decoration: none;
@@ -887,8 +943,8 @@ font-size: 40px;
     }
     .background-form,
     .addresses {
-        width: 90%; /* En la versión móvil, ambos ocupan el ancho completo */
-        max-width: 100%; /* Ajusta el ancho máximo al 100% */
+        width: 90%;  
+        max-width: 100%;  
         margin-right: 0; /* Elimina el margen derecho en la versión móvil */
         float: none; /* Reinicia la propiedad float */
     }
@@ -986,4 +1042,4 @@ table td:nth-child(3){
     height: auto;
 }
 
-}
+ 
