--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -165,6 +165,11 @@ main {
     flex-wrap: wrap;
     justify-content: space-between;
 }
+#info-container a{
+    color: #030404;
+    font-weight: bold;
+}
+
 .info {
     width: calc(33.33% - 10px);  
     margin-bottom: 20px;  
@@ -187,6 +192,11 @@ main {
     justify-content: space-between;
 }
 
+#info-cozumel  a{
+    color: #030404;
+    font-weight: bold;
+}
+
 .places {
     width: 66.666%;  
     display: flex;
@@ -200,9 +210,6 @@ main {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
     transition: transform 0.3s ease-in-out; 
     padding: 5px;
-}
-.visit-cozumel:hover {
-    transform: scale(1.05); /* Efecto de escala al pasar el ratón por encima */
 }
 
 .places h1 {
@@ -259,7 +266,7 @@ main {
 
 .visit-cozumel img {
     width: 100%;
-    height: auto; /* Asegurándose de que las imágenes se ajusten al contenedor */
+    height: auto;  
 }
 
 footer{
