--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -384,7 +384,7 @@ form {
 }
 
 form fieldset{
-    margin:rem 0;
+    margin:0;
     border: 2px solid  gold;
     border-radius: 10px;
     padding-left: 10px;
@@ -739,7 +739,7 @@ font-size: 40px;
     border: 2px solid gold;
     border-radius: 10px;  
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
-    transition: box-shadow 0.3s;  /
+    transition: box-shadow 0.3s;  
 }
 #rental-information section:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
@@ -852,7 +852,7 @@ font-size: 40px;
     .social-media a svg {
         width: 20px;  
         height: 20px; 
-        fill: gold;  
+        all: gold;  
     }
 
     .menu-links li.active a {
