--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -1,26 +1,10 @@
-:root {
-    --background-light: #ffffff;
-    --text-light: #000000;
-    --background-dark: #2b2b2b;
-    --text-dark: #ffffff;
-}
+
 body, html {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     background-color: var(--background-light);
     color: var(--text-light);
-}
-body.dark-mode {
-    background-color: var(--background-dark);
-    color: var(--text-dark);
-}
-body.dark-mode h1,
-body.dark-mode h2,
-body.dark-mode p,
-body.dark-mode a,
-body.dark-mode li {
-    color: var(--text-dark);
 }
 
 #high-temp-message {
@@ -267,7 +251,7 @@ main {
     width: 100%;
 }
 .weather-card, .forecast.card {
-    width: 100%; /* Full width within the weather and forecast containers */
+    width: 100%;  
     box-sizing: border-box;
     margin: 10px;
     padding: 15px;
@@ -312,8 +296,8 @@ footer{
 
 .footer-menu {
     position: absolute;
-    top: 0; /* Ajusta la posición vertical según sea necesario */
-    left: 50%; /* Centra horizontalmente */
+    top: 0;  
+    left: 50%;  
     transform: translateX(-50%); /* Ajusta la posición horizontal para centrar */
      ;
 }
@@ -523,8 +507,8 @@ form label.top input:required:valid{
 }
 #rental-image {
     position: absolute;
-    bottom: 0; /* Adjust the top value as needed */
-    right: 0; /* Adjust the right value as needed */
+    bottom: 0;  
+    right: 0;  
 }
 #rentalsTableContainer {
     max-width: 75%;
@@ -580,8 +564,8 @@ table td:nth-child(2){
 }
 #fleet-image {
     position: absolute;
-    bottom: 0; /* Adjust the top value as needed */
-    right: 0; /* Adjust the right value as needed */
+    bottom: 0;  
+    right: 0;  
 }
 
 #fleet {
@@ -594,19 +578,18 @@ table td:nth-child(2){
   .fleet-item {
     display: flex;
     flex-direction: column;
-    /*align-items: center;*/
     text-align: center;
     margin: 10px;
     height: 500px;
     padding-top: 30px;
     margin-bottom: 50px;
-    width: 30%; /* Ajusta el ancho según sea necesario */
+    width: 30%;  
     border: 2px solid gold;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
   }
   .fleet-item:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Cambiar la sombra según tus preferencias */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);   
     transform: translateY(-5px); /* Efecto de elevación */
 }
 .fleet-item:hover::after {
@@ -657,8 +640,8 @@ table td:nth-child(2){
 }
 #reservation-image {
     position: absolute;
-    bottom: 0; /* Adjust the top value as needed */
-    right: 0; /* Adjust the right value as needed */
+    bottom: 0; 
+    right: 0;  
 }
 
 #reservations {
@@ -792,9 +775,6 @@ font-size: 40px;
     max-width: 250px;
     height: auto;
 }
-
-
-
 
 
 /* For screens up to 768px width (typical mobile devices) */
